# cudaToGLSandbox

./: .clang-format  .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt
src/app/: CMakeLists.txt  app.cu  app.h  defines.h  main.cpp
src/app/gpu/: info.cu  info.h  kernel.cu  kernel.h
